--- a/_includes/skills/section.html
+++ b/_includes/skills/section.html
@@ -1,20 +1,21 @@
 {% assign pastel_classes = "pastel-1,pastel-2,pastel-3,pastel-4,pastel-5" | split: "," %}
 {% assign pastel_index = 0 %}
 
-<div class="mb-5">
-    <h3 class="h4 fw-bold border-bottom pb-2 mb-4 text-secondary">{{ include.section.section }}</h3>
+<section class="skill-section mb-5">
+    <!-- Título adaptable -->
+    <h3 class="section-title h4 fw-bold border-bottom pb-2 mb-4">{{ include.section.section }}</h3>
 
     {% if include.section.items %}
-    {% assign pastel_class = pastel_classes[pastel_index] %}
-    {% include skills/category.html items=include.section.items class=pastel_class %}
-    {% assign pastel_index = pastel_index | plus: 1 %}
+        {% assign pastel_class = pastel_classes[pastel_index] %}
+        {% include skills/category.html items=include.section.items class=pastel_class %}
+        {% assign pastel_index = pastel_index | plus: 1 %}
     {% endif %}
 
     {% if include.section.subsections %}
-    {% for category in include.section.subsections %}
-    {% assign pastel_class = pastel_classes[pastel_index] %}
-    {% include skills/category.html items=category.items title=category.name class=pastel_class %}
-    {% assign pastel_index = pastel_index | plus: 1 %}
-    {% endfor %}
+        {% for category in include.section.subsections %}
+            {% assign pastel_class = pastel_classes[pastel_index] %}
+            {% include skills/category.html items=category.items title=category.name class=pastel_class %}
+            {% assign pastel_index = pastel_index | plus: 1 %}
+        {% endfor %}
     {% endif %}
-</div>
+</section>
