--- a/_includes/skills/section.html
+++ b/_includes/skills/section.html
@@ -6,16 +6,22 @@
     <h3 class="section-title h4 fw-bold border-bottom pb-2 mb-4">{{ include.section.section }}</h3>
 
     {% if include.section.items %}
-        {% assign pastel_class = pastel_classes[pastel_index] %}
+    {% assign pastel_class = pastel_classes[pastel_index] %}
+    <div class="mb-4">
         {% include skills/category.html items=include.section.items class=pastel_class %}
-        {% assign pastel_index = pastel_index | plus: 1 %}
+    </div>
+    {% assign pastel_index = pastel_index | plus: 1 %}
     {% endif %}
 
     {% if include.section.subsections %}
+    <div class="row g-4">
         {% for category in include.section.subsections %}
-            {% assign pastel_class = pastel_classes[pastel_index] %}
+        {% assign pastel_class = pastel_classes[pastel_index] %}
+        <div class="col-12 col-md-6 col-lg-4">
             {% include skills/category.html items=category.items title=category.name class=pastel_class %}
-            {% assign pastel_index = pastel_index | plus: 1 %}
+        </div>
+        {% assign pastel_index = pastel_index | plus: 1 %}
         {% endfor %}
+    </div>
     {% endif %}
 </section>
