--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="dark">
+<html lang="{{ page.lang | default: site.default_lang }}" data-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
   <script src="https://kit.fontawesome.com/98ca02228e.js" crossorigin="anonymous"></script>
 
   <!-- Favicon -->
-  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="{{ '/assets/icons/favicon.ico' | relative_url }}" type="image/x-icon">
 
   <!-- Estilos -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,12 +19,14 @@
 
 <body>
   <!-- Navbar -->
-  {% include navbar.html %}
+  {% include layout/navbar.html %}
 
   <!-- Header -->
-  {% unless page.hide_header %}
-    {% include header.html %}
-  {% endunless %}
+  {% if page.hero %}
+    {% include components/hero-header.html %}
+  {% elsif page.hide_header != true %}
+    {% include layout/header.html %}
+  {% endif %}
 
   <!-- Contenido -->
   <main class="container mt-5 pt-5">
@@ -32,7 +34,7 @@
   </main>
 
   <!-- Footer -->
-  {% include footer.html %}
+  {% include layout/footer.html %}
 
   <!-- Botón Scroll to top -->
   <button class="scroll-to-top icon-button" aria-label="Volver arriba"></button>
